# esp32_demo

./: README.md  mqtt_test.py  partitions.csv  sdkconfig.defaults
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h  wifi_reason.c  wifi_reason.h
main/: CMakeLists.txt  Kconfig.projbuild  deep_sleep.c  idf_component.yml  mqtt_app.c  mqtt_app.h  ota_https.c  ota_https.h  station_example_main.c  telemetry.c  telemetry.h  wifi_connect.c  wifi_connect.h
